--- a/module/styles.css
+++ b/module/styles.css
@@ -1,65 +1,45 @@
 body {
 	padding: 0; 
 	margin: 0;
-	background-color: #eee;
+	background-color:#F08080 ;
 }
 
 .module {
 	width: 100px;
 	height: 100px;
-	background-color: white;
+	background-color:#E9967A;
 	position: fixed;
 	top: 50%;
 	left: 50%;
 	margin-top: -51px;
 	margin-left: -51px;
-	border: 1px solid black;
+	border: 1px #F08080;
 }
 
 /* Add your styles below */
 
 p {
-	margin: 0;
-	font-family: Arial, sans-serif;
-	font-size: 10px;
-	padding: 10px;
-	background-color: yellow;
+	font-family:"Zapfino";
+    font-style:italic;
+    text-decoration:none;
+    font-size:10px;
+    text-align:center;
+    color:purple;
+    margin-bottom:0px;
+	background-color: Powderblue;
 }
-
-img {
-	width: 40px;
-	position: absolute;
-	top:25px;
-	left: 50px;
-}
-
-.box {
-	position: absolute;
-	top:50px;
-	left: 10px;
-	background-color: lime;
-	width: 30px;
-	height: 30px;
-	border-radius: 10px;
-
-}
-
-.overlap {
-	position: absolute;
-	bottom: -20px;
-	right: 20px;
-	width: 10px;
-	height: 40px;
-	background-color: blue;
-	border: 1px solid black;
-
+ img {
+width: 40px;
+position: absolute;
+top:25px;
+left: 50px;
 }
 
 a {
-	color: red;
+	color: blue;
 }
 
 a:hover {
-	color: black;
+	color: "#6495ED";
 }
 
